# syntropism

./: .gitignore  AGENTS.md  README.md  database.db  docker-compose.nats.yml  docker-compose.yml  main.py  otel-collector-config.yaml  pyproject.toml
bp_agents/: attention.py  dependencies.py  economy.py  genesis.py  market.py  models.py  orchestrator.py  sandbox.py  scheduler.py  service.py
docs/: monolith_spec.md  roadmap.md
docs/architecture/: change_requirements.md  current_architecture.md  future_direction.md  future_recommendations.md  persistence_roles.md  plan.md  plan_implications.md  recommendations.md
docs/design/: 01_philosophy.md  02_ledger.md  02_money.md  03_market.md  04_sandbox.md  05_evolution.md  06_genesis_agent.md  07_attention_mechanism.md  08_maintaining_diversity.md  09_bootstrapping.md  10_agent_benchmark.md  11_benchmark_scenarios.md  12_communication_architecture.md  13_game_theory.md  14_observability.md  2026-02-07-alignment-audit-agent-runtime.md  2026-02-07-alignment-audit-monolith.md  agent_mutability.md
docs/plans/: 2026-02-07-alignment-audit-agent-runtime.md  2026-02-07-bp-agents-2-implementation.md  2026-02-07-domain-model-audit.md  2026-02-08-alignment-audit-genesis.md  2026-02-08-e2e-testing-strategy.md  2026-02-08-genesis-implementation-plan.md  2026-02-13-nats-observability-migration.md  2026-02-14-benchmark-implementation.md  2026-02-14-benchmark-market-alignment.md  2026-02-14-tdd-implementation-market-alignment.md  2026-02-15-observability-standardization.md  genesis_agent_refactor.md
runtime/: Dockerfile  pyproject.toml
syntropism/: attention.py  cli.py  contracts.py  genesis.py  orchestrator.py  sandbox.py  scheduler.py  service.py
syntropism/api/: dependencies.py  service.py
syntropism/benchmarks/: constructor.py  runner.py
syntropism/core/: genesis.py  observability.py  orchestrator.py  sandbox.py  scheduler.py
syntropism/domain/: attention.py  contracts.py  economy.py  events.py  market.py  models.py  social.py
syntropism/infra/: database.py  llm_proxy.py  mcp_gateway.py
tests/: conftest.py  test_api.py  test_attention.py  test_audit_runtime.py  test_economy.py  test_evolution.py  test_genesis_agent.py  test_main.py  test_market.py  test_models.py  test_orchestrator.py  test_sandbox.py  test_scheduler.py
tests/e2e/: test_observability_e2e.py  test_runtime_handshake.py  test_scenarios.py
tests/integration/: test_api.py  test_attention_flow_verification.py  test_benchmark_alignment.py  (+7 more)
(+45 files in other folders)
