[tool.poetry]
name = "bp-agent-runtime"
version = "0.1.0"
description = "Standardized runtime for BP agents"
authors = ["BP Team"]

package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
loguru = "^0.7.2"
pydantic = ">=2.0.0"
httpx = ">=0.27.0"
nats-py = "^2.13.1"
opentelemetry-sdk = "^1.39.1"
opentelemetry-exporter-otlp = "^1.39.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
